fix track item list
